# tensorrt-yolov4

./: CMakeLists.txt  README.md
example/: CMakeLists.txt  buildEngine.cpp  videoDet.cpp
model/: yolov3.cfg
onnx-tensorrt/: CMakeLists.txt  ResizeNearest.cu  builtin_plugins.cpp  yolo.cu
source/: CMakeLists.txt  trt.cpp
